--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,10 +1,10 @@
 version: 1.0
-runtime: nodejs18
+runtime: nodejs12
 build:
   commands:    
     build:
       - npm install 
-      - npx playwright install chromium
+      - npx playwright install chromium --with-deps
       - npx playwright install-deps                        
 run:                              
   command: npm run dev
