--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,12 +1,13 @@
 version: 1.0
-runtime: nodejs16
+runtime: nodejs18
 build:
-  commands:
+  commands:    
     build:
-      - npm install
-      - yum -y install libnss3 libnspr4 libdbus-1-3 libatk1.0-0 libatk-bridge2.0-0 libcups2 libdrm2 libatspi2.0-0 libx11-6 libxcomposite1 libxdamage1 libxext6 libxfixes3 libxrandr2 libgbm1 libxcb1 libxkbcommon0 libpango-1.0-0 libcairo2 libasound2
+      - npm install 
       - npx playwright install chromium
-run:
+      - apt install apt
+      - npx playwright install-deps                        
+run:                              
   command: npm run dev
   network:
     port: 3000
