--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "postinstall": "playwright install --with-deps chromium",
+    "postinstall": "playwright install chromium",
     "dev": "ts-node index.ts"
   },
   "keywords": [],
