--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
-    "postinstall": "playwright install chromium",
+    "postinstall": "npx playwright install chromium",
+    "start": "run dev",
     "dev": "ts-node index.ts"
   },
   "keywords": [],
