--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "16.x"
   },
   "scripts": {
-    "postinstall": "npx playwright install chromium",
+    "postinstall": "npx playwright install chromium && npx playwright install-deps",
     "start": "run dev",
     "dev": "ts-node app.ts",
     "vercel-build": "echo hellp"
