--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "playwright-extra": "^4.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
